...
        },
    ) { padding ->
        Box(Modifier.fillMaxSize().padding(padding), contentAlignment = Alignment.TopCenter) {
            if (!book.loaded) Spacer(Modifier.fillMaxSize())
            else
                Crossfade(
                    modifier = Modifier.widthIn(max = 700.dp).fillMaxSize().testTag("page-content"),
                    targetState = selected ?: "tab$tab",
                    animationSpec = tween(duration),
                    label = "page",
                ) { page ->
                    pageStates.SaveableStateProvider(page) {
                        val person = book.people.firstOrNull { it.id == page }
...
